--- a/src/template.html
+++ b/src/template.html
@@ -46,7 +46,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Saumya Mariam</span>
+          Hello, my name is <span class="text-color-main">Saumya Mariam</span>
           <br />
           I'm a Software Developer with 8 years experience.
         </h1>
