--- a/src/template.html
+++ b/src/template.html
@@ -70,7 +70,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile1.jpg"
+                src="./assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
