--- a/src/template.html
+++ b/src/template.html
@@ -231,10 +231,10 @@
           <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="www.linkedin.com/in/saumyamariam" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/miamathews" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
