--- a/src/template.html
+++ b/src/template.html
@@ -231,7 +231,7 @@
           <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
-          <a href="www.linkedin.com/in/saumyamariam" target="_blank">
+          <a href="https://linkedin.com/in/saumyamariam" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a href="https://github.com/miamathews" target="_blank">
