--- a/src/template.html
+++ b/src/template.html
@@ -20,9 +20,9 @@
     <!-- Put here your site title -->
     <title>Saumya Mariam | Web Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="Mia, Saumya Mariam, Full Stack Web Developer" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Saumya Mariam | Full Stack Web Developer" />
 
     <!-- Required librarys -->
     <link
