Update Template file

--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
     <!-- Put here your site title -->
     <title>Saumya Mariam | Web Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="Mia, Saumya Mariam, Full Stack Web Developer" />
+    <meta name="keywords" content="Saumya Mariam, Full Stack Web Developer" />
     <!-- Improve your SEO by adding a small descrption of you -->
     <meta name="description" content="Saumya Mariam | Full Stack Web Developer" />
 
